--- a/styleblog.css
+++ b/styleblog.css
@@ -4,3 +4,4 @@ h2 {font-size: 26px; color: green; text-align: center;}
 p {font-size: 16px; color: deepskyblue; text-align: center;}
 section {margin-right: 75px; margin-left: 75px; margin-top: 25px;}
 main {margin-top: 30px;}
+img {height: 100px; width: 120px;}
